syntax = "proto3";
package User;
message User {
  string id = 1;
  string name = 2;
  string prenom = 3;
}

message SearchUsersRequest {
string query = 1;
}
message SearchUsersResponse {
repeated User users = 1;
}
message CreateRequest {
  string name = 2;
  string prenom = 3;
  }
  message CreateResponse {
  repeated User user = 1;
  }
service UserService {
rpc SearchUsers(SearchUsersRequest) returns (SearchUsersResponse);
rpc CreateUser(CreateRequest) returns (CreateResponse);
}